Currently, the drop down input field in the GnuPG Configuration Overview performs case-insensitive inline completion. This has the undesired side-effect that one cannot easily correct a mistyped command. For example, if one erroneously entered gpgconf -x (which results in gpgconf: invalid option "-x") then one cannot correct this to gpgconf -X because this text is automatically completed with the previously entered gpgconf -x. This needs to be changed.
Description
Description
Revisions and Commits
Revisions and Commits
rKLEOPATRA Kleopatra | |||
rKLEOPATRA24aa7325f464 Make auto-completion case-sensitive and use a popup | |||
rKLEOPATRA37db4bc9a724 Make auto-completion case-sensitive and use a popup |