Make auto-completion case-sensitive and use a popup

Case-insensitive auto-completion makes it impossible to correct a
mistyped `gpgconf -x` to `gpgconf -X`. Switching to case-sensitive
auto-completion fixes this.

GnuPG-bug-id: 7615